Revert "Merge branch 'COM-1510' into 'master'"
This reverts merge request !86
